# backend

./: .gitignore  .pylintrc  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: linting.yml  testing.yml
src/: app.py  config.py  constants.py
src/api/: router.py  schemas.py
src/frontend/: router.py
src/frontend/static/: script.js  style.css
src/frontend/templates/: index.html
src/models/: base.py  dependencies.py  preprocessing.py  random.py  yolo.py
tests/: conftest.py  test_websocket.py
